# Segment-Main-Subject

./: LICENSE  README.md  client.py  gradio_app.py  pyproject.toml  requirements.txt
segment_main_subject/: __init__.py  segment_main_subject.py  server.py  utils.py
segment_main_subject/models/: gdino.py  sam.py  vllm.py
