[project]
name = "segment-main-subject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.23.2",
    "litserve>=0.2.7",
    "loguru>=0.7.3",
    "openai>=1.70.0",
    "sam-2",
    "setuptools>=78.1.0",
    "supervision>=0.24.0",
    "vllm>=0.8.2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2", rev = "c2ec8e14a185632b0a5d8b161928ceb50197edd" }
